Icon alignment correction

--- a/css/ultimeline.css
+++ b/css/ultimeline.css
@@ -50,7 +50,7 @@
   box-sizing: border-box;
   width: 40px;
   height: 40px;
-  line-height: 45px;
+  line-height: 42px;
   font-size: 1.4em;
   text-align: center;
   margin-left: -20px;
